<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileSettingsFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="@color/light_turquoise">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="left"
            android:layout_marginTop="6dp"
            app:srcCompat="@drawable/baseline_chevron_left_24" />
    </androidx.cardview.widget.CardView>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/app_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></de.hdodenhof.circleimageview.CircleImageView>

    <TextView
        android:id="@+id/profileNameSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Name And Surname"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileImage" />

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="400dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileNameSurname">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/general_settings"
                android:textSize="20dp"
                />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_margin="10dp"
                android:layout_height="wrap_content"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:text="@string/name"
                    android:textSize="15dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_margin="10dp"
                android:layout_height="wrap_content"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/surnameField"
                    android:text="@string/surname"
                    android:textSize="15dp"
                    android:hint="@string/surname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_margin="10dp"
                android:layout_height="wrap_content"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/entryDateField"
                    android:text="@string/empty_string"
                    android:textSize="15dp"
                    android:inputType="date"
                    android:hint="@string/date_format_entry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_margin="10dp"
                android:layout_height="wrap_content"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/graduationDateField"
                    android:text="@string/empty_string"
                    android:textSize="15dp"
                    android:inputType="date"
                    android:hint="@string/date_format_graduate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_margin="10dp"
                android:layout_height="wrap_content"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/departmantField"
                    android:text="@string/empty_string"
                    android:textSize="15dp"
                    android:hint="@string/department"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/countrySpinner"
                android:layout_width="260dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:entries="@array/country_names"
                android:spinnerMode="dropdown"
                ></Spinner>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_margin="10dp"
                android:layout_height="wrap_content"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cityField"
                    android:text="@string/empty_string"
                    android:textSize="15dp"
                    android:hint="@string/city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/gradeSpinner"
                android:layout_width="260dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:entries="@array/graduate_types"
                android:spinnerMode="dropdown"
                ></Spinner>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_margin="10dp"
                android:layout_height="wrap_content"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/currentBusinessField"
                    android:text="@string/empty_string"
                    android:textSize="15dp"
                    android:hint="@string/current_business"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/social_settings"
                android:textSize="20dp"
                />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_margin="10dp"
                android:layout_height="wrap_content"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/facebookField"
                    android:text="@string/empty_string"
                    android:textSize="15dp"
                    android:hint="@string/facebook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_margin="10dp"
                android:layout_height="wrap_content"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/linkedinField"
                    android:text="@string/empty_string"
                    android:textSize="15dp"
                    android:hint="@string/linkedin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/contact_settings"
                android:textSize="20dp"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_margin="10dp"
                android:layout_height="wrap_content"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/contactMailField"
                    android:text="@string/empty_string"
                    android:textSize="15dp"
                    android:hint="@string/contact_mail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_margin="10dp"
                android:layout_height="wrap_content"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/contactPhoneField"
                    android:text="@string/empty_string"
                    android:textSize="15dp"
                    android:hint="@string/contact_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/changePasswordButton"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@color/red_200"
                android:text="@string/change_password" />

            <Button
                android:id="@+id/saveData"
                android:layout_width="300dp"
                android:layout_margin="25dp"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:backgroundTint="@color/turquoise"
                />

            <Button
                android:id="@+id/logoutButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/red_200"
                android:layout_margin="10dp"
                android:text="@string/exit_app"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/progressContainer"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

        <!-- Add other views that need to be displayed on top of the white background -->

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>